@@ -53,8 +53,8 @@ CONF.CONTROLLER_MAX_ACTIVE_NTASKS_IN_PROCESSOR = 4
 
 ##CONF.PREQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
 #  CONF.PREQUEUING_POLICY = {:queuing_class => :PoolQueue}
- CONF.PREQUEUING_POLICY = {:queuing_class => :ChunkedPoolQueue}
-#  CONF.PREQUEUING_POLICY = {:queuing_class => :ChunkedSizedPoolQueue}
+# CONF.PREQUEUING_POLICY = {:queuing_class => :ChunkedPoolQueue}
+  CONF.PREQUEUING_POLICY = {:queuing_class => :ChunkedSizedPoolQueue}
 #  CONF.PREQUEUING_POLICY = {:queuing_class => :FileBufferdQueue}
 ##CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
 #  CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
@@ -88,7 +88,7 @@ CONF.SORTEDQUEUE_THRESHOLD = 100000/2
 ##CONF.LOCAL_OUTPUT_POOL_THRESHOLD = 32000
 
 ##CONF.N_MOD_GROUP_BY = 5
-CONF.N_MOD_GROUP_BY = 40
+#CONF.N_MOD_GROUP_BY = 40
 #CONF.HASH_MODULE = "fairy/share/hash-rb18"
 #CONF.HASH_MODULE = "fairy/share/hash-1"
 ##CONF.HASH_MODULE = "fairy/share/hash-md5"
